# Simple_Dynamic_Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/BlockClasses/: AddSimpleClass.cpp  AddSimpleClass.hpp  BlockClass.cpp  BlockClass.hpp  BlockClassesManager.cpp  BlockClassesManager.hpp  BlockDialog.hpp  CMakeLists.txt  ComparatorClass.cpp  ComparatorClass.hpp  ConstantSourceClass.cpp  ConstantSourceClass.hpp  DerivativeBlockClass.cpp  DerivativeBlockClass.hpp  GainBlockClass.cpp  GainBlockClass.hpp  IntegrationBlockClass.cpp  IntegrationBlockClass.hpp  MultiplyBlockClass.cpp  MultiplyBlockClass.hpp  RampSourceClass.cpp  RampSourceClass.hpp  ScopeDisplayClass.cpp  ScopeDisplayClass.hpp  ScopeDisplayDialog.cpp  ScopeDisplayDialog.hpp  SineSourceClass.cpp  SineSourceClass.hpp  StepSourceClass.cpp  StepSourceClass.hpp  SubSystemClass.cpp  SubSystemClass.hpp  pch.h
src/BlockPalette/: BlockPalette.cpp  BlockPalette.hpp  CMakeLists.txt  PaletteBlocksViewer.cpp  PaletteBlocksViewer.hpp  PaletteCategoryPicker.cpp  PaletteCategoryPicker.hpp  PaletteProvider.cpp  PaletteProvider.hpp  pch.h
src/BlockPallete/: BlockPallete.cpp  BlockPallete.hpp  CMakeLists.txt  PalleteBlocksViewer.cpp  PalleteBlocksViewer.hpp  PalleteCategoryPicker.cpp  PalleteCategoryPicker.hpp  PalleteProvider.cpp  PalleteProvider.hpp
src/BuiltinClasses/: AddSimpleClass.cpp  AddSimpleClass.hpp  BuiltinBasicClass.cpp  BuiltinBasicClass.hpp  BuiltinClassesPlugin.cpp  BuiltinClassesPlugin.hpp  CMakeLists.txt  ComparatorClass.cpp  ComparatorClass.hpp  ConstantSourceClass.cpp  ConstantSourceClass.hpp  DerivativeBlockClass.cpp  DerivativeBlockClass.hpp  GainBlockClass.cpp  GainBlockClass.hpp  IntegrationBlockClass.cpp  IntegrationBlockClass.hpp  MultiplyBlockClass.cpp  MultiplyBlockClass.hpp  RampSourceClass.cpp  RampSourceClass.hpp  ScopeDisplayClass.cpp  ScopeDisplayClass.hpp  ScopeDisplayDialog.cpp  ScopeDisplayDialog.hpp  SineSourceClass.cpp  SineSourceClass.hpp  StepSourceClass.cpp  StepSourceClass.hpp  pch.h
src/GraphicsScene/: BlockObject.cpp  BlockObject.hpp  BlockResizeObject.cpp  BlockResizeObject.hpp  BlockSocketObject.cpp  BlockSocketObject.hpp  CMakeLists.txt  DraggableObject.cpp  DraggableObject.hpp  GraphicsLogic.cpp  GraphicsLogic.hpp  GraphicsObject.cpp  GraphicsObject.hpp  GraphicsObjectsManager.cpp  GraphicsObjectsManager.hpp  GraphicsScene.cpp  GraphicsScene.hpp  GraphicsSceneController.cpp  GraphicsSceneController.hpp  GraphicsScene_exports.h  HoverHighlightObject.cpp  HoverHighlightObject.hpp  IGraphicsScene.hpp  IGraphicsSceneController.hpp  NetCategoriesStyleManager.cpp  NetCategoriesStyleManager.hpp  NetObject.cpp  NetObject.hpp  NewNet.cpp  NewNet.hpp  NewNetJunction.cpp  NewNetJunction.hpp  Node.cpp  Node.hpp  NodeSocket.cpp  NodeSocket.hpp  SolverUtils.cpp  SolverUtils.hpp  SpaceScreenTransformer.cpp  SpaceScreenTransformer.hpp  (+5 more)
src/LuaPlugin/: CMakeLists.txt  LuaDiffEqn.cpp  LuaDiffEqn.hpp  LuaDiffEqnClass.cpp  LuaDiffEqnClass.hpp  LuaEditorDialog.cpp  LuaEditorDialog.hpp  LuaEqnClass_private.hpp  LuaExpressionClass.cpp  LuaExpressionClass.hpp  LuaNLEqn.cpp  LuaNLEqn.hpp  LuaNLEqnClass.cpp  LuaNLEqnClass.hpp  LuaRuntime.cpp  LuaRuntime.hpp  LuaStandaloneDiffEqnClass.cpp  LuaStandaloneDiffEqnClass.hpp  LuaStandaloneNLEqnClass.cpp  LuaStandaloneNLEqnClass.hpp  LuaStandaloneStatefulEqnClass.cpp  LuaStandaloneStatefulEqnClass.hpp  LuaStatefulEqn.cpp  LuaStatefulEqn.hpp  LuaStatefulEqnClass.cpp  LuaStatefulEqnClass.hpp  Utility.cpp  Utility.hpp  pch.h
src/LuaPlugintest/: CMakeLists.txt  StatefulEqntest.cpp  pch.h
src/NetUtils/: CMakeLists.txt  DeleteHelpers.cpp  DeleteHelpers.hpp  NetsSolver.cpp  NetsSolver.hpp  Utils.cpp  Utils.hpp  pch.h
src/NetUtilstest/: CMakeLists.txt  NetsSolvertest.cpp
src/NodeEditorApp/: AboutDialog.cpp  AboutDialog.hpp  BlockPropertiesDialog.cpp  BlockPropertiesDialog.hpp  BoxObject.cpp  BoxObject.hpp  ButtonWidget.cpp  CMakeLists.txt  ExampleContextMenu.cpp  ExampleContextMenu.hpp  IdTypes.hpp  LogHandler.cpp  LogHandler.hpp  MainNodeScene.cpp  MainNodeScene.hpp  NewSceneDialog.cpp  NewSceneDialog.hpp  NodeEditorApp.cpp  NodeEditorApp.hpp  NodeGraphicsScene.cpp  NodeGraphicsScene.hpp  PluginsManager.cpp  PluginsManager.hpp  SceneManager.cpp  SceneManager.hpp  SimulationManager.cpp  SimulationManager.hpp  SimulationSettingsDialog.cpp  SimulationSettingsDialog.hpp  SimulatorRunner.cpp  SimulatorRunner.hpp  main.cpp  pch.h
src/NodeModels/: BlockData.hpp  BlockModel.cpp  BlockModel.hpp  BlockPortsUpdate.hpp  CMakeLists.txt  FunctionalBlocksDataManager.cpp  FunctionalBlocksDataManager.hpp  FunctionalBlocksManager.cpp  FunctionalBlocksManager.hpp  IdTypes.hpp  NetModel.cpp  NetModel.hpp  NodeModel.cpp  NodeModel.hpp  NodeScene.cpp  NodeScene.hpp  Observer.hpp  PortBlocksDataManager.cpp  PortBlocksDataManager.hpp  SceneModelManager.cpp  SceneModelManager.hpp  SubsystemBlocksDataManager.cpp  SubsystemBlocksDataManager.hpp  Utils.hpp  pch.h
src/NodeModelstest/: Blocktest.cpp  CMakeLists.txt  NetModeltest.cpp  NetSegmentModeltest.cpp  NetSegmenttest.cpp  Nettest.cpp  Nodetest.cpp  SceneModeltest.cpp  Scenetest.cpp  pch.h
src/NodeSDLStylers/: BlockStyler.cpp  BlockStyler.hpp  BlockStylerFactory.cpp  BlockStylerFactory.hpp  CMakeLists.txt  DefaultBlockStyler.cpp  DefaultBlockStyler.hpp  GainBlockStyler.cpp  GainBlockStyler.hpp  PropertyPrintStyler.cpp  PropertyPrintStyler.hpp  SVGBlockStyler.cpp  SVGBlockStyler.hpp  SpaceScreenTransformer.cpp  SpaceScreenTransformer.hpp  TextBlockStyler.cpp  TextBlockStyler.hpp  pch.h
src/PluginAPI/: BlockCClass.h  BlockClass.cpp  BlockClass.hpp  BlockClassHelpers.hpp  BlockClassesManager.cpp  BlockClassesManager.hpp  BlockDialog.cpp  BlockDialog.hpp  BlockTemplate.h  BlocksPlugin.cpp  BlocksPlugin.hpp  CMakeLists.txt  Logger.hpp  PluginRuntime.cpp  PluginRuntime.hpp  TestTemplates.c  pch.h
src/SDL_Framework/: CMakeLists.txt  IntrusivePtr.hpp  SDLCPP.hpp  SDLFramework.cpp  SDLFramework.hpp  SDLRenderer.cpp  SDLRenderer.hpp  SDL_Math.hpp  SDL_headers.h  SVGRasterizer.cpp  (+4 more)
(+242 files in other folders)
